--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
     <head>
     <title>My Class 4 & 5 Project</title>
-    <link rel=“stylesheet” href=“styles.css”>
+    <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <h1>HTML for Dummies</h1>
-            <nav>
-                <a href=“#”>Link 1</a>
-                <a href=”#”>Link 2</a>
-            </nav>
+            
         </header>
         <main>
             <section>
-                <p>More text goes here to explain how to run some HTML for dummies. Isn't this a cool website? I think it is. </p>
-                <img src=“url” alt=“text”>
+                <p>HTML is the abbreviation of Hyper Text Markup Language. It is the standard language for tagging contents for web browsers.
+
+                    HTML is represented by “Elements”. Elements are also known as Tags. Web browsers can only render a website when it is written in their supported language. HTML is the most common markup language and has the highest acceptance to web browsers.</p>
+                    <img src="https://st2.depositphotos.com/1016225/6641/i/600/depositphotos_66416721-stock-photo-crash-test-speech.jpg” alt=“Placeholder image of Dummies”>” 
             </section>
         <footer>&copy;A. Luckenbach & R. Davis, 2022</footer>
+        <nav>
+			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies pt. 2
     </body>
 </html>
+
