updates to index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </section>
         <footer>&copy;A. Luckenbach & R. Davis, 2022</footer>
         <nav>
-			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies pt. 2
-            <a href="https://github.com/RobertDavis-cyber/hello-world.git">HTML for Dummies pt. 2    
+			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies I Armon
+            <a href="https://github.com/RobertDavis-cyber/hello-world.git">HTML for Dummies II Robert  
     </body>
 </html>
 
