--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <footer>&copy;A. Luckenbach & R. Davis, 2022</footer>
         <nav>
 			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies I Armon
-            <a href="https://github.com/RobertDavis-cyber/hello-world.git">HTML for Dummies II Robert  
+            <a href="https://robertdavis-cyber.github.io/hello-world/">HTML for Dummies II Robert  
     </body>
 </html>
 
