--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <body>
         <header>
             <h1>HTML for Dummies</h1>
-
+            <script>
+                function checkPassword() {
+                    var password = document.getElementByID("passwordBox");
+                    var passwordText = password.value;
+                    if(passwordText == "Seattle102n65") {
+                        return true;
+                    }
+                    alert("Access denied!  Incorrect password!");
+                    return false;   
+                }
+            </script>
         </header>
+        <p style="font-size: 30pt;">HTML DISCOVER</p>
+        <p>Please enter the password to view this website.</p>
+        <p>Password;<input id="PasswordBox" type="password"/></p>
+        <a href="https://armonluck.github.io/hello-world/" onclick="return 
+        checkPassword();">
+        Click here to submit password and view website</a>"
         <main>
             <section>
                 <p>HTML is the abbreviation of Hyper Text Markup Language. It is the standard language for tagging contents for web browsers.
