--- a/index.html
+++ b/index.html
@@ -33,7 +33,20 @@
                 </p>
 			<img src="https://www.placecage.com/640/360" alt="Placeholder image Nicholas Cage">
 		</section>
+            <script>
+                function sayHello(name) {
+                    alert("Hello, " + name);
+                }
+                sayHello("Rad Student!");
+        </script>
             </section>
+            <script>
+              function getName() {
+                return "Rad Student";
+              }
+              var student = getName();
+              alert (students);
+            </script>
         <footer>&copy;A. Luckenbach & R. Davis, 2022</footer>
         <nav>
 			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies I Armon
