--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <title>My Class 4 & 5 Project</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js"></script>
     </head>
     <body>
         <header>
