edits to index.htlm

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         </script>
             </section>
             <script>
-              function getName() {
-                return "Rad Student";
-              }
-              var student = getName();
-              alert (students);
+        // declare a variable called usersName, assign it the value of user's input returned from prompt
+        let usersName = prompt("What is your name?");
+        // print message to console
+        console.log('User entered: ' + usersName);
+        // write message to the HTML document
+        document.write("Aloha " + usersName + ", Mahalo for looking at my page!");
             </script>
+             
         <footer>&copy;A. Luckenbach & R. Davis, 2022</footer>
         <nav>
 			<a href="https://armonluck.github.io/hello-world/">HTML for Dummies I Armon
