--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         </header>
         <p style="font-size: 30pt;">HTML DISCOVER</p>
         <p>Please enter the password to view this website.</p>
-        <p>Password;<input id="PasswordBox" type="password"/></p>
-        <a href="https://armonluck.github.io/hello-world/" onclick="return 
-        checkPassword();">
+        <p>Password;<input class="PasswordBox" type="button"/></p>
+        <a href="https://armonluck.github.io/hello-world/" onclick="checkPassword();">
         Click here to submit password and view website</a>"
         <main>
             <section>
@@ -78,4 +77,3 @@
             <a href="https://robertdavis-cyber.github.io/hello-world/">HTML for Dummies II Robert  
     </body>
 </html>
-
