--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE HTML>
 <html>
     <head>
@@ -24,11 +26,12 @@
                 }
             </script>
         </header>
-        <p style="font-size: 30pt;">HTML DISCOVER</p>
+        <p style="font-size: 30pt;">HTML BASICS</p>
         <p>Please enter the password to view this website.</p>
-        <p>Password;<input class="PasswordBox" type="button"/></p>
-        <a href="https://armonluck.github.io/hello-world/" onclick="checkPassword();">
-        Click here to submit password and view website</a>"
+        <p>Password;<input class="PasswordBox" type="password"/></p>
+        <a href="https://armonluck.github.io/hello-world/" onclick="return checkPassword();">
+        Click here to submit password and view website</a>
+        
         <main>
             <section>
                 <p>HTML is the abbreviation of Hyper Text Markup Language. It is the standard language for tagging contents for web browsers.
